Added a search bar and a search functionality that updates the DOM dynamically

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
 <body>
     <h1>Products Dashboard</h1>
+    <div class="searchSection">
+        <label for="search">Search</label>
+        <input type="search" name="search" id="searchBox" placeholder="Search Product...">
+    </div>
+
     <div class="loading">loading...</div>
     <div class="error">error fetching</div>
     <div class="products-container">
