Add no product state and some code cleanups

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Products Dashboard</h1>
     <div class="searchSection">
-        <label for="search">Search</label>
+        <label for="searchBox">Search</label>
         <input type="search" name="search" id="searchBox" placeholder="Search Product...">
     </div>
 
