Added filter by category feature

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <input type="search" name="search" id="searchBox" placeholder="Search Product...">
     </div>
 
+    <select name="category" id="categorySelector">
+        <option value="all">all</option>
+    </select>
+
     <div class="loading">loading...</div>
     <div class="error">error fetching</div>
     <div class="products-container">
